feature: removing old folders and controllers
