# app/server.js
@@ -9,10 +9,6 @@ const MongoAdapter = require('./adapter/mongo');
 
 const userRoutes = require('./users/route')
 const coursesRoutes = require('./courses/route')
-const shiftRoutes = require('./shift/route')
-const phoneRoutes = require('./phone/route')
-const statusRoutes = require('./status/route')
-const addressRoutes = require('./address/route')
 
 const app = express()
 const mongoAdapter = MongoAdapter()
@@ -26,10 +22,6 @@ app.use('/swagger', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
 app.use(swStats.getMiddleware({ swaggerSpec: swaggerDocument }))
 app.use('/api/user', userRoutes)
 app.use('/api/courses', coursesRoutes)
-app.use('/api/shift', shiftRoutes)
-app.use('/api/phone', phoneRoutes)
-app.use('/api/status', statusRoutes)
-app.use('/api/address', addressRoutes)
 
 const upServer = () => {
   mongoAdapter.connect()
